you/force-app/main/default/objects/Quote/fields/DiferencaNominalPorcentagem__c.field-meta.xml
<CustomField>
    <fullName>DiferencaNominalPorcentagem__c</fullName>
    <label>Diferença Nominal (%)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>