you/force-app/main/default/objects/Quote/fields/DiferencaNominalReal__c.field-meta.xml
<CustomField>
    <fullName>DiferencaNominalReal__c</fullName>
    <label>Diferença Nominal (R$)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>