you/force-app/main/default/objects/Quote/fields/DiferencaVPLPorcentagem__c.field-meta.xml
<CustomField>
    <fullName>DiferencaVPLPorcentagem__c</fullName>
    <label>Diferença VPL (%)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>