you/force-app/main/default/objects/Quote/fields/DiferencaVPLReal__c.field-meta.xml
<CustomField>
    <fullName>DiferencaVPLReal__c</fullName>
    <label>Diferença VPL (R$)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>