you/force-app/main/default/objects/Quote/fields/Empreendimento__c.field-meta.xml
<CustomField>
    <fullName>Empreendimento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empreendimento</label>
    <referenceTo>Empreendimento__c</referenceTo>
    <relationshipLabel>Cotações</relationshipLabel>
    <relationshipName>Cota_es</relationshipName>
    <type>Lookup</type>
</CustomField>