you/force-app/main/default/objects/Quote/fields/PorcentagemCaptacaoHabiteseProposta__c.field-meta.xml
<CustomField>
    <fullName>PorcentagemCaptacaoHabiteseProposta__c</fullName>
    <description>Porcentagem Captação até o Habite-se Proposta</description>
    <label>Porcentagem Captação até o Habite-se Pro</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>