you/force-app/main/default/objects/Quote/fields/PorcentagemCaptacaoHabiteseTabela__c.field-meta.xml
<CustomField>
    <fullName>PorcentagemCaptacaoHabiteseTabela__c</fullName>
    <description>Porcentagem Captação até o Habite-se Tabela</description>
    <label>Porcentagem Captação até o Habite-se Tab</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>