you/force-app/main/default/objects/Quote/fields/PorcentagemCaptacaoTabela__c.field-meta.xml
<CustomField>
    <fullName>PorcentagemCaptacaoTabela__c</fullName>
    <label>Porcentagem Captação à vista Tabela</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>