you/force-app/main/default/objects/Quote/fields/PrazoFinanciamentoTabela__c.field-meta.xml
<CustomField>
    <fullName>PrazoFinanciamentoTabela__c</fullName>
    <label>Prazo de financiamento tabela</label>
    <length>255</length>
    <type>Text</type>
</CustomField>