you/force-app/main/default/objects/Quote/fields/ValorNominalProposta__c.field-meta.xml
<CustomField>
    <fullName>ValorNominalProposta__c</fullName>
    <label>Valor Nominal Proposta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>