you/force-app/main/default/objects/Quote/fields/ValorTotalComissao__c.field-meta.xml
<CustomField>
    <fullName>ValorTotalComissao__c</fullName>
    <description>O valor total da comissão</description>
    <label>O valor total da comissão</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>