you/force-app/main/default/objects/Quote/fields/ValorVPLTabela__c.field-meta.xml
<CustomField>
    <fullName>ValorVPLTabela__c</fullName>
    <label>Valor VPL Tabela</label>
    <length>255</length>
    <type>Text</type>
</CustomField>